# Penguin-Game

./: CMakeLists.txt
include/: animation.h  animationPlayer.h  assetManager.h  game.h  hitbox.h  objects.h  penguin.h  platform.h  rays.h  spike.h  world.h
src/: animationPlayer.cpp  assetsManager.cpp  game.cpp  hitbox.cpp  main.cpp  objects.cpp  penguin.cpp  platform.cpp  rays.cpp  spike.cpp  world.cpp
